[gd_scene load_steps=2 format=3 uid="uid://bjx4feiqmyjvc"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_882uc"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_882uc")

[node name="BackpackButton" type="Button" parent="."]
offset_left = 8.0
offset_top = 584.0
offset_right = 40.0
offset_bottom = 637.0
theme_override_font_sizes/font_size = 32
text = "B"

[node name="BackpackUI" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 8.0
offset_top = 288.0
offset_right = 296.0
offset_bottom = 576.0

[node name="BackpackPanel" type="Panel" parent="BackpackUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.027
anchor_top = -0.028
anchor_right = -0.027
anchor_bottom = -0.028
offset_left = -0.0079999
offset_top = 0.0640001
offset_right = 303.992
offset_bottom = 304.064

[node name="Slot1" type="TextureButton" parent="BackpackUI"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 128.0
disabled = true

[node name="Slot2" type="TextureButton" parent="BackpackUI"]
layout_mode = 0
offset_left = 160.0
offset_right = 288.0
offset_bottom = 128.0
disabled = true

[node name="Slot3" type="TextureButton" parent="BackpackUI"]
layout_mode = 0
offset_top = 160.0
offset_right = 128.0
offset_bottom = 288.0
disabled = true

[node name="Slot4" type="TextureButton" parent="BackpackUI"]
layout_mode = 0
offset_left = 160.0
offset_top = 160.0
offset_right = 288.0
offset_bottom = 288.0
disabled = true

[node name="SlotLabel1" type="Label" parent="BackpackUI"]
layout_mode = 0
offset_left = 88.0
offset_top = 96.0
offset_right = 120.0
offset_bottom = 119.0
horizontal_alignment = 2

[node name="SlotLabel2" type="Label" parent="BackpackUI"]
layout_mode = 0
offset_left = 248.0
offset_top = 96.0
offset_right = 280.0
offset_bottom = 119.0
horizontal_alignment = 2

[node name="SlotLabel3" type="Label" parent="BackpackUI"]
layout_mode = 0
offset_left = 88.0
offset_top = 256.0
offset_right = 120.0
offset_bottom = 279.0
horizontal_alignment = 2

[node name="SlotLabel4" type="Label" parent="BackpackUI"]
layout_mode = 0
offset_left = 248.0
offset_top = 256.0
offset_right = 280.0
offset_bottom = 279.0
horizontal_alignment = 2

[connection signal="pressed" from="BackpackButton" to="." method="_on_backpack_button_pressed"]
[connection signal="pressed" from="BackpackUI/Slot1" to="." method="_on_Slot1_pressed"]
[connection signal="pressed" from="BackpackUI/Slot2" to="." method="_on_Slot2_pressed"]
[connection signal="pressed" from="BackpackUI/Slot3" to="." method="_on_Slot3_pressed"]
[connection signal="pressed" from="BackpackUI/Slot4" to="." method="_on_Slot4_pressed"]
